# chezmoi-files

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  chezmoi-files.example.toml  test.txt
.github/workflows/: ci.yml  release.yml
src/: color.rs  config.rs  lib.rs  main.rs  tree.rs
tests/: config_command_test.rs  config_parsing_test.rs  integration_test.rs
