[package]
name = "chezmoi-files"
version = "0.8.1"
authors = ["Razvan Azamfirei <razvan@azamfirei.com>"]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.92.0"
description = "A command-line utility for generating colorized tree visualizations of file paths with glob pattern filtering and customizable colors"
documentation = "https://docs.rs/chezmoi-files"
repository = "https://github.com/razvanazamfirei/chezmoi-files"
homepage = "https://github.com/razvanazamfirei/chezmoi-files"
readme = "README.md"
keywords = ["tree", "visualization", "cli", "chezmoi", "filesystem"]
categories = ["command-line-utilities", "visualization"]
exclude = [
    ".github/*",
    "test.txt",
    "lcov.info",
    "target/*",
    "*.profraw",
    "*.profdata",
]

[[bin]]
name = "chezmoi-files"
path = "src/main.rs"

[lib]
name = "chezmoi_files"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
indexmap = "2.13.0"
toml = "1.0.2+spec-1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
glob = "0.3.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
